/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2026-2026. All rights reserved.
 */

package com.huawei.hicampus.claw.agent.tool;

/**
 * 定义同一模型响应中多个工具调用的执行模式。
 *
 * @version [br_eCampusCore 26.0.0, 2026/05/06]
 * @since [br_eCampusCore 26.0.0]
 */
public enum ToolExecutionMode {
    SEQUENTIAL,
    PARALLEL
}
